add sign up and complete login with firebase

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -10,4 +10,12 @@
         android:layout_height="match_parent"
         android:text="Hello" />
 
+    <Button
+        android:id="@+id/logOutBT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:onClick="logout"
+        android:text="Log out" />
+
 </FrameLayout>
