--- a/app/src/main/res/layout/fragment_utilities.xml
+++ b/app/src/main/res/layout/fragment_utilities.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.utilities.UtilitiesFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/buttonLV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </FrameLayout>
