--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -5,23 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.study.LibraryActivity">
-    <FrameLayout
+
+    <RelativeLayout
         android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:layout_gravity="center">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_x="180dp"
+                android:layout_y="110dp"
+                android:visibility="gone" />
+
+
+        </WebView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/video_list"
+            android:layout_below="@id/web_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            />
 
-        <VideoView
-            android:id="@+id/video_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:visibility="gone" />
-
-    </FrameLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
