--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -11,11 +11,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/search_layout">
+
+            <EditText
+                android:id="@+id/search_bar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Nhập tên video..." />
+
+            <Button
+                android:id="@+id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tìm kiếm" />
+
+        </LinearLayout>
+
         <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="220dp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_below="@+id/search_layout">
 
             <ProgressBar
                 android:id="@+id/progress_bar"
@@ -36,6 +58,16 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             />
+
+        <Button
+            android:id="@+id/add_new_video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:text="+"
+            android:textSize="50dp"
+            android:paddingBottom="10dp"/>
 
     </RelativeLayout>
 
