complete home fragment

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="@dimen/fragment_vertical_margin"
     tools:context=".ui.personal.ChangePasswordActivity">
 
     <ScrollView
@@ -20,31 +21,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_medium"
                 android:text="Mật khẩu hiện tại:" />
 
             <EditText
                 android:id="@+id/mat_khau_hien_tai"
+                android:layout_margin="@dimen/margin_medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
 
             <TextView
+                android:layout_margin="@dimen/margin_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Mật khẩu mới:" />
 
             <EditText
+                android:layout_margin="@dimen/margin_medium"
                 android:id="@+id/mat_khau_moi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
 
             <TextView
+                android:layout_margin="@dimen/margin_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nhập lại mật khẩu mới:" />
 
             <EditText
+                android:layout_margin="@dimen/margin_medium"
                 android:id="@+id/nhap_lai_mat_khau_moi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,11 +59,13 @@
 
 
             <LinearLayout
+                android:layout_margin="@dimen/margin_medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <Button
+                    android:layout_margin="@dimen/margin_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -67,6 +76,7 @@
                     />
 
                 <Button
+                    android:layout_margin="@dimen/margin_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
