--- a/app/src/main/res/layout/dialog_add_video.xml
+++ b/app/src/main/res/layout/dialog_add_video.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="@dimen/fragment_vertical_margin"
     android:padding="16dp">
 
     <TextView
