--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -70,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="Quay lại"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="@color/md_theme_onSecondary"
                     android:layout_gravity="fill_vertical"
                     android:id="@+id/quay_lai"
                     />
@@ -81,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="Đổi mật khẩu"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="@color/md_theme_onSecondary"
                     android:layout_gravity="fill_vertical"
                     android:id="@+id/doi_mat_khau" />
 
