--- a/app/src/main/res/layout/activity_subject_member.xml
+++ b/app/src/main/res/layout/activity_subject_member.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/fragment_vertical_margin"
     tools:context=".ui.study.SubjectMemberActivity">
 
     <LinearLayout
