--- a/app/src/main/res/layout/fragment_utilities.xml
+++ b/app/src/main/res/layout/fragment_utilities.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/fragment_vertical_margin"
         android:orientation="vertical">
 
         <ListView
