--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/margin_medium"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
@@ -18,7 +18,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ngày"
-            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_marginTop="8dp"
@@ -29,7 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Danh sách lớp học"
-            android:textColor="@color/white"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"/>
 
